# Selfix

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  selfix.config.example.ts  tsconfig.json
.github/workflows/: publish.yml
design-docs/: High-Level-Design.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md
selfix/: __init__.py  attempt.py  config.py  result.py
selfix/agent/: __init__.py  prompts.py  worker.py
selfix/git/: __init__.py  pr.py  remote.py  repo.py
selfix/git/providers/: __init__.py  github.py  gitlab.py
selfix/graph/: __init__.py  orchestrator.py  state.py
selfix/graph/nodes/: __init__.py  build_check.py  escalation.py  exploration.py  fix_generation.py  pr_creation.py  repo_setup.py  report.py  retry_decision.py  signal_intake.py  validation.py
selfix/signals/: __init__.py  base.py  error.py  manual.py  metric.py  router.py  scheduled.py  webhook.py
selfix/validator/: __init__.py  protocol.py
selfix/validator/builtin/: __init__.py  composite.py  http_health.py  pytest_validator.py  shell.py
src/: config.ts  index.ts  pipeline.ts
src/commit/: index.ts  types.ts
src/diagnose/: index.ts  types.ts
src/filter/: index.ts  types.ts
src/patch/: index.ts  types.ts
src/sink/: index.ts  types.ts
src/validate/: index.ts  types.ts
tests/: test_graph_routing.py  test_phase2.py  test_phase3.py  test_validator.py
