[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfix"
version = "0.1.0"
description = "Language-agnostic autonomous code improvement pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["selfix*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
